--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@pinia/nuxt": "^0.11.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
+    "emailjs-com": "^3.2.0",
     "nuxt": "^3.18.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.20",
