--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.11.2",
     "@popperjs/core": "^2.11.8",
+    "@supabase/supabase-js": "^2.56.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "emailjs-com": "^3.2.0",
